--- a/CSS_Intro/AboutMe.html
+++ b/CSS_Intro/AboutMe.html
@@ -4,33 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        span{
-            font-size: 20px;
-        }
-        h2{
-            color:blue;
-        }
-    </style>
 </head>
 <link rel="stylesheet" href="Style.css">
 <body>
-    <h2 style="font-size: 50px;">RAHUL SINGH </h2>
-    <div>
-        <span>software engineer | </span>
-        <span>tech enthusiast | </span>
-        <span>Teacher |</span>
-        <span>sports lover </span>
-    </div>
-    <h4>I love to build and break stuff and educate people about tech.</h4>
+    <header>
+        <h2 id="head-text">RAHUL SINGH </h2>
+        <div>
+            <span class="mid-text">software engineer | </span>
+            <span class="mid-text">tech enthusiast | </span>
+            <span class="mid-text">Teacher |</span>
+            <span class="mid-text">sports lover </span>
+        </div>
+        <h4>I love to build and break stuff and educate people about tech.</h4>
+    </header>
     <ul>
-        <li>
+        <li class="mid-text">
             software enginner 2 @ <a href="https://www.google.com/">Google</a>
         </li>
-        <li>
+        <li class="mid-text">
             Ex-software engineer @ <a href="https://www.linkedin.com/">Linkedin</a>
         </li>
-        <li>
+        <li class="mid-text">
             Ex-software engineer @ <a href="https://www.interviewbit.com/">Interview-bit</a>
         </li>
     </ul>
