--- a/4.Project2_portfolio/index.html
+++ b/4.Project2_portfolio/index.html
@@ -7,10 +7,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li>
+                <h2>Rahul Singh</h2>
+            </li>
+            <li>
+                <a href="">projects</a>
+            </li>
+            <li>
+                <a href="">Hire me!!</a>
+            </li>
+            <li>
+                <a href="">Resume</a>
+            </li>
+        </ul>
+    </nav>
     <section id="intro">
         <p>Hello humans!!!</p>
-        <p>My name is <span>Rahul Singh </span></p>
-        <div>
+        <p class="name">My name is <span>Rahul Singh </span></p>
+        <div class="profile">
             <span>Software Engineer | </span>
             <span>Tech Enthusiast | </span>
             <span>Sports Lover </span>
@@ -19,7 +35,7 @@
             I love to build and break stuff. Technology captivates me like nothing else.
         </h2>
         <p>
-            I am a 3rd year student @ @ Galgotias University and love to spread word about Tech
+            I am a 3rd year student @ Galgotias University and love to spread word about Tech
         </p>
     </section>
     <section id="experience">
@@ -35,5 +51,11 @@
             </li>
         </ul>
     </section>
+    <div class="section-turquoise">
+        <section id="hire">
+            <h2>Hire me</h2>
+            <p>I am always eager to learn and get my hands dirty on some exciting projects. </p>
+        </section>
+    </div>
 </body>
 </html>
